2011-04-16  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.amg, config/makefile.msc, config/makefile.msc, 
	config/term.pc.h, config/makefile.win, config/makefile.ztc,
	src/win/wgnuplot.def, src/win/wgnupl32.def:
	Remove build files for no longer supported platforms DOS16, WIN16, 
	Amiga and compilers.

	* src/ansicheck.h src/command.c src/eval.h src/stdfn.h src/syscfg.h
	src/term.c src/term.h src/makefile.all src/makefile.awc docs/Makefile.in
	term/fg.trm : Remove suport for the Zortech compiler and the no longer 
	available Flash Graphics library.

2011-04-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_steps) src/gp_types.h src/graph3d.c src/tables.c
	docs/gnuplot.doc docs/plotstyles.gnu:
	New plot style "with fillsteps" is identical to "with steps" except
	that the area between the stepped line and the baseline at y=0
	is filled using the currently active fill style.

	* src/graphics.c (plot_fsteps histeps_vertical histeps_horizontal):
	Simplify the code to use clip_line() rather than lots of in-line tests.

	* term/dumb.trm docs/gnuplot.doc: Updates

2011-04-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c (msdos_getch, readline), src/win/winmain.c 
	(ConsoleGetch): Don't quit on DEL on an empty line. Map DEL key to del
	character 127 instead of ^D, but keep old behaviour of deleting current
	character on platforms Windows, MSDOS and OS/2. SF Bug #3285571

2011-04-13  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua:  Fix "charsize" option.

2011-04-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/gd.trm term/svg.trm term/x11.trm src/misc.c:
	Stricter checks that the red component of RGB colors stays in range.

2011-04-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WndGraphProc), src/win/wtext.c (WndTextProc):
	Enable access to popup menu via status bar and keyboard.

2011-04-12  Bastian Maerkisch  <bmaerkisch@web.de>
